@@ -13,6 +13,13 @@ reverse time order.
 
 ==============
 
+Tag: V00-03-77
+2016-06-24 Mikhail S. Dubrovin
+- Add gain factor and gain_mask in det.calib method (PSAS-139)
+A       examples/ex_epix100_cmod.py
+M       src/AreaDetector.py
+M       src/PyDetectorAccess.py
+
 Tag: V00-03-76
 2016-06-21 Mikhail S. Dubrovin
 - Add three new parameters to the command line algorithm of Detector.app.det_ndarr_raw_proc (PSAS-6)
